<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_game">

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.example.syn.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/navigation_msg"
        android:name="com.example.syn.ui.msg.MsgFragment"
        android:label="@string/title_msg"
        tools:layout="@layout/fragment_msg" />

    <fragment
        android:id="@+id/navigation_clock"
        android:name="com.example.syn.ui.clock.ClockFragment"
        android:label="@string/title_clock"
        tools:layout="@layout/fragment_clock" />
    <fragment
        android:id="@+id/navigation_music"
        android:name="com.example.syn.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />
</navigation>