<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.music.MusicFragment">




    <!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical" >-->

<!--        <ImageView-->
<!--            android:id="@+id/pic"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="80dp"-->
<!--            tools:src="@drawable/pic" />-->
<!--        <TextView-->
<!--            android:id="@+id/textView_name"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:text="@string/loading"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/textView_count"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toEndOf="@+id/textView_count"-->
<!--            app:layout_constraintStart_toStartOf="@+id/textView_count"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView_count" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView_count"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:text="@string/loading"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.514"-->
<!--            app:layout_constraintStart_toStartOf="parent" />-->

<!--        <SeekBar-->
<!--            android:id="@+id/seekBar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@+id/textView_name" />-->
<!--        -->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/colorAccent"-->
<!--            android:layout_marginBottom="0dp"-->
<!--            android:orientation="horizontal">-->

<!--            <ImageButton-->
<!--                android:id="@+id/bottom_pre"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:background="@color/colorAccent"-->
<!--                tools:src="@drawable/ic_pre" />-->
<!--            <ImageButton-->
<!--                android:id="@+id/bottom_play"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@color/colorAccent"-->
<!--                tools:src="@drawable/ic_play" />-->
<!--            <ImageButton-->
<!--                android:id="@+id/bottom_next"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:background="@color/colorAccent"-->
<!--                tools:src="@drawable/ic_next" />-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:onClick="onPlay"
            android:layout_gravity="center"
            android:text="@string/play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onPrev"
            android:layout_gravity="center"
            android:text="@string/prevent"
            app:layout_constraintEnd_toEndOf="@+id/button_stop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_stop"
            app:layout_constraintTop_toBottomOf="@+id/button_stop" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onStop"
            android:layout_gravity="center"
            android:text="@string/stop"
            app:layout_constraintEnd_toEndOf="@+id/button_pause"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_pause"
            app:layout_constraintTop_toBottomOf="@+id/button_pause"  />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onNext"
            android:layout_gravity="center"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@+id/button_prev"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_prev"
            app:layout_constraintTop_toBottomOf="@+id/button_prev"  />

        <Button
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onPause"
            android:layout_gravity="center"
            android:text="@string/pause"
            app:layout_constraintEnd_toEndOf="@+id/button_play"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/button_play"
            app:layout_constraintTop_toBottomOf="@+id/button_play" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView_count"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView_count"
            app:layout_constraintStart_toStartOf="@+id/textView_count"
            app:layout_constraintTop_toBottomOf="@+id/textView_count" />

        <TextView
            android:id="@+id/textView_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="176dp"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:layout_marginBottom="74dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_name" />
    </LinearLayout>
</FrameLayout>